--- a/haxe/ui/backend/ceramic/_module/styles/main.css
+++ b/haxe/ui/backend/ceramic/_module/styles/main.css
@@ -1,3 +1,10 @@
-.label {
+.label, .textfield, .textarea {
 	font-size: 12px;
+}
+
+.textfield {
+	padding: 5px;
+	padding-left: 5px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
